<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="16dp"
    android:paddingEnd="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="Nama lengkap" />

        <ImageButton
            android:id="@+id/buttonHelp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="0"
            android:contentDescription="@string/text_image"
            android:scaleType="center"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_help"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textCityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/molecule_address_city_title" />

            <EditText
                android:id="@+id/editTextCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/text_empty"
                android:inputType="textPersonName"
                android:minHeight="30dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/very_light_grey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textPostalCodeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/molecule_address_postal_code_title" />

            <EditText
                android:id="@+id/editTextPostalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/text_empty"
                android:inputType="numberSigned"
                android:minHeight="30dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/very_light_grey" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textPostalAddressTitle"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:text="@string/molecule_address_postal_address_title" />

    <EditText
        android:id="@+id/editTextPostalAddress"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:minHeight="30dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/text_empty"
        android:autofillHints="" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/very_light_grey" />

    <TextView
        android:id="@+id/textError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:layout_marginTop="12dp"
        android:textStyle="normal"
        android:textColor="@color/reddish"
        tools:text="Tanggal tidak boleh kosong"
        />


</LinearLayout>