<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="16dp"
    android:paddingEnd="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="Foto Pemilik &amp; KTP" />

        <ImageButton
            android:id="@+id/buttonHelp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="0"
            android:contentDescription="@string/text_image"
            android:scaleType="center"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_help"
            tools:visibility="visible" />

    </LinearLayout>

    <TextView
        android:id="@+id/textDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="16dp"
        android:textColor="@color/brown_grey"
        android:textSize="12sp"
        android:textStyle="normal"
        tools:text="This is required for your account verification" />

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="4dp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:visibility="visible"
        android:contentDescription="@string/text_image" />

    <TextView
        android:id="@+id/textFileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="8dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonAction"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/text_take_file"
        app:iconPadding="0dp" />

    <View
        android:id="@+id/viewLine"
        android:layout_marginTop="16dp"
        android:background="@color/very_light_grey"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/textError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/text_can_not_empty"
        android:textColor="@color/reddish"
        android:textSize="12sp"
        android:textStyle="normal"
        android:visibility="gone"
        tools:visibility="visible" />


</LinearLayout>